-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.1
-
None
-
Android
-
437db8df51c8ce11f6d856d1c0441572cf218e1f
If the camera sensor is not mounted in the same orientation as the device natural orientation, the custom focus point is not set at the position the user asked for.
For Gerrit Dashboard: QTBUG-36208 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
75690,1 | Android: fixes custom camera focus point. | release | qt/qtmultimedia | Status: MERGED | +2 | 0 |